# neon-synth

./: .gitignore  CMakeLists.txt  PLAN.md  README.md  SPEC.md  SystemInformation.in  pkg-config  pkg-config-stub
.github/workflows/: build-windows-vst3.yml
Presets/factory/: acid_bass.json  init.json  neon_sweep.json  pluck_lead.json  warm_pad.json
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/DSP/: Envelope.cpp  Envelope.h  Filter.cpp  Filter.h  Oscillator.cpp  Oscillator.h  Voice.cpp  Voice.h  VoiceManager.cpp  VoiceManager.h
Source/UI/: EnvelopeEditor.cpp  EnvelopeEditor.h  FilterEditor.cpp  FilterEditor.h  LookAndFeelNeon.cpp  LookAndFeelNeon.h  Oscilloscope.cpp  Oscilloscope.h  PresetBrowser.cpp  PresetBrowser.h
